<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.splash.SplashActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/splash_bg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/splash_back">

            <TextView
                android:id="@+id/tv_title"
                style="@style/splash_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pockemon"
                android:textColor="@color/colorWhite"
                android:textSize="55sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_motivation"
                style="@style/splash_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="20dp"
                android:text="@string/motivational_text"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="40sp" />

        </RelativeLayout>


    </FrameLayout>
</layout>