<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/save_margins"
        tools:context=".ui.details.PockemonDetailsActivity">

        <LinearLayout
            android:id="@+id/first_row"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_pockemon"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:scaleType="centerCrop" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_pockemon_abilities"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/abilities"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/save_margins"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_pockemon_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/save_margins"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_row"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_above="@id/latest_row"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/moves"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/save_margins"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/tv_pockemon_moves"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="@string/app_name"
                    android:textSize="@dimen/save_margins" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/latest_row"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_pockemon"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary"
                android:text="save"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

            <Button
                android:id="@+id/delete_pockemon"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"></Button>
        </LinearLayout>
    </RelativeLayout>
</layout>